# home-credit-risk-system

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: base.yaml
docs/: PROJECT_REPORT.md  TECHNICAL_DEEP_DIVE.md  XGBOOST.md
pipelines/: aggregate.py  ingest.py  score.py  train.py  visualize.py
src/: __init__.py  config.py
src/features/: __init__.py  aggregations.py
src/fraud_risk_system.egg-info/: SOURCES.txt  top_level.txt
src/models/: __init__.py  manager.py
src/serving/: __init__.py  app.py
tests/: conftest.py  test_config.py  test_features.py  test_integration.py  test_models.py
